<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2016 Sewatech

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.sewatech.utils</groupId>
    <artifactId>sw-utils</artifactId>
    <version>0.5.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>fr.sewatech.oss</groupId>
        <artifactId>sonatype-parent</artifactId>
        <version>1.0</version>
    </parent>

    <name>Sewatech Utils</name>
    <description>Some utilities for Web application deployments</description>
    <url>https://github.com/sewatech/swutils</url>

    <modules>
      <module>tc-utils</module>
        <module>hib-utils</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:Sewatech/swutils.git</connection>
        <url>scm:git:git@github.com:Sewatech/swutils.git</url>
        <developerConnection>scm:git:git@github.com:Sewatech/swutils.git</developerConnection>
    </scm>

    <organization>
        <name>Sewatech</name>
        <url>http://sewatech.fr/</url>
    </organization>

    <properties>
        <java.version>1.8</java.version>
        <servlet.version>3.0.1</servlet.version>

        <tomcat.version>8.5.3</tomcat.version>

        <junit.version>4.12</junit.version>
        <mockito.version>1.10.19</mockito.version>
        <assertj.version>2.2.0</assertj.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <header>LICENSE-header</header>
                    <useDefaultExcludes>true</useDefaultExcludes>
                </configuration>
                <!-- run it : mvn license:format-->
            </plugin>
        </plugins>
    </build>
</project>
